1998-08-12  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* Makefile.am (INCLUDES): Use new subsituted variable 
	FFIINCLUDES instead of -I$(ffidir)/include.

	* MessageProbe.m: Include swarmconfig.h.

1998-08-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* objectbase.h: Add @class SwarmObject.

1998-07-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m ([Arguments +createArgc:Argv:]): Cast results
	of find_executable to char * for program_invocation_name.

1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MessageProbe.m (copy_to_nth_colon): Use xmalloc not malloc.
	([MessageProbe -dynamicCallOn:]): Use long long buffer for return
	value.  New macro VAL to deference to desired type. In mips64
	case, adjust pointer.

	* Arguments.m: Note use of access from misc.h.

	* VarProbe.m ([VarProbe -setProbedVariable:]): Use xfree instead
	of free.
	([VarProbe -createEnd]): Use xmalloc instead of malloc.
	([VarProbe -free]): Use xfree instead of free.

	* Arguments.m, MessageProbe.m, VarProbe.m: Don't include stdlib.h.

	* MessageProbe.m: Undef PACKAGE and VERSION after including
	ffi.h.

1998-07-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* objectbase.h: Split VarProbe into new features vs. user
	presentation.

	* VarProbe.m: Add phase tags.

	* VarProbe.h: Include objectbase.h.
	(VarProbe): Adopt to _VarProbe.

1998-07-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* VarProbe.h (VarProbe): Rename interactive to interactiveFlag.
	Make it boolean.

	* VarProbe.[hm], objectbase.h: Rename isInteractive to
	getInteractiveFlag.

	* objectbase.h: Minor reformatting of documentation.

1998-07-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m, MessageProbe.m: Include misc things last.

1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ProbeMap.m, VarProbe.m: Include misc.h instead of string.h.

1998-07-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* objectbase.h (Probe): Add argument to setProbeClass.
